# Digitalization

./: .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  crud_edges.py  crud_nodes.py  export.py  filtering.py  formatting.py  graph_build.py  graph_render.py  io_excel.py  main.py  provenance.py  sample_data.py  schema.py  state_guardrails.py  validate.py
docs/: ARCHIVE_CHECKLIST.md  DATA_SCHEMA.md  PROJECT_SPEC.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  SCREENSHOTS.md  THESIS_APPENDIX.md  WORKFLOW.md
docs/images/: README.md
docs/thesis_artifacts/: README.md
scripts/: build_release.ps1  build_release.sh  quality_gate.py  smoke_check.py
tests/: test_config_env.py  test_crud_edges.py  test_crud_nodes.py  test_determinism.py  test_export.py  test_export_summary.py  test_filtering.py  test_formatting.py  test_graph_build.py  test_io_excel_errors.py  test_io_excel_save.py  test_networkx_build.py  test_provenance.py  test_sample_data.py  test_smoke_check.py  test_state_guardrails.py  test_validate.py
